--- a/app/View/cart.html
+++ b/app/View/cart.html
@@ -33,7 +33,7 @@
                     <td>
                       <div class="mb-3" style="max-width: 120px;">
                         
-                       {{ item.quality }}
+                       {{ item.quantity }}
                       </div>
 
                     </td>
@@ -101,7 +101,7 @@
       Корзина пустая:
       <div class="col-lg-3 col-sm-6">
   
-          <button class="btn btn-outline-primary btn-sm btn-block">Продолжить покупки</button>
+          <a href="/categorie/2" class="btn btn-outline-primary btn-sm btn-block">Продолжить покупки</a>
       </div>
     </div>
     {% endif%}
