--- a/app/View/single.html
+++ b/app/View/single.html
@@ -14,16 +14,16 @@
               <p><strong class="text-primary h4">$50.00</strong></p>
               <div class="mb-1 d-flex">
                 <label for="option-sm" class="d-flex mr-3 mb-3">
-                  <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-sm" name="option-1"></span> <span class="d-inline-block text-black">Small</span>
+                  <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-sm" name="size" value="s"></span> <span class="d-inline-block text-black">Small</span>
                 </label>
                 <label for="option-md" class="d-flex mr-3 mb-3">
-                  <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-md" name="option-2"></span> <span class="d-inline-block text-black">Medium</span>
+                  <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-md"  name="size" value="m"></span> <span class="d-inline-block text-black">Medium</span>
                 </label>
                 <label for="option-lg" class="d-flex mr-3 mb-3">
-                  <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-lg" name="option-3"></span> <span class="d-inline-block text-black">Large</span>
+                  <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-lg"  name="size" value="l"></span> <span class="d-inline-block text-black">Large</span>
                 </label>
                 <label for="option-xl" class="d-flex mr-3 mb-3">
-                  <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-xl" name="option-4"></span> <span class="d-inline-block text-black"> Extra Large</span>
+                  <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-xl"  name="size" value="xl"></span> <span class="d-inline-block text-black"> Extra Large</span>
                 </label>
               </div>
               <div class="mb-5">
@@ -31,7 +31,7 @@
                 <div class="input-group-prepend">
                   <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
                 </div>
-                <input type="text" class="form-control text-center" value="1" placeholder="" name="quality" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                <input type="text" class="form-control text-center" value="1" placeholder="" name="quantity" aria-label="Example text with button addon" aria-describedby="button-addon1">
                 <div class="input-group-append">
                   <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
                 </div>
