--- a/app/View/cart.html
+++ b/app/View/cart.html
@@ -27,7 +27,7 @@
                       <img src="images/cloth_1.jpg" alt="Image" class="img-fluid">
                     </td>
                     <td class="product-name">
-                      <h2 class="h5 text-black">{{ item.title }}</h2>
+                      <h2 class="h5 text-black">{{ item.title }} ({{ item.size }})</h2>
                     </td>
                     <td>${{ item.price }}</td>
                     <td>
@@ -85,7 +85,7 @@
 
                 <div class="row">
                   <div class="col-md-12">
-                    <button class="btn btn-primary btn-lg py-3 btn-block" onclick="window.location='checkout.html'">Proceed To Checkout</button>
+                    <a class="btn btn-primary btn-lg py-3 btn-block" href="/checkout">Proceed To Checkout</a>
                   </div>
                 </div>
               </div>
