--- a/app/View/cart.html
+++ b/app/View/cart.html
@@ -1,4 +1,4 @@
-{% include 'header.html' %}
+{{ header | raw }}
 {% if goods is not empty %}
 
 <div class="site-section">
@@ -24,7 +24,7 @@
                 
                   <tr>
                     <td class="product-thumbnail">
-                      <img src="images/cloth_1.jpg" alt="Image" class="img-fluid">
+                      <img src="images/{{ item.image }}.jpg" alt="Image" class="img-fluid">
                     </td>
                     <td class="product-name">
                       <h2 class="h5 text-black">{{ item.title }} ({{ item.size }})</h2>
@@ -99,4 +99,4 @@
       </div>
     </div>
     {% endif%}
-{% include 'footer.html' %}
+{{ footer | raw }}
