--- a/app/View/checkout.html
+++ b/app/View/checkout.html
@@ -1,4 +1,4 @@
-{% include 'header.html' %} 
+{{ header | raw }}
    
 
     <div class="site-section">
@@ -128,5 +128,4 @@
       </div>
     </div>
 
-    
-{% include 'footer.html' %}
+    {{ footer | raw }}
