--- a/app/View/common/header.html
+++ b/app/View/common/header.html
@@ -28,9 +28,12 @@
       <div class="site-navbar-top">
         <div class="container">
           <div class="row align-items-center">
-
-            <div class="col-3 col-md-4 order-2 order-md-1 site-search-icon text-left">
-              
+  
+            <div class="col-6 col-md-4 order-2 order-md-1 site-search-icon text-left">
+              <form action="" class="site-block-top-search">
+                <span class="icon icon-search2"></span>
+                <input type="text" class="form-control border-0" placeholder="{{ lang.search }}">
+              </form>
             </div>
 
             <div class="col-12 mb-3 mb-md-0 col-md-4 order-1 order-md-2 text-center">
@@ -42,13 +45,12 @@
             <div class="col-6 col-md-4 order-3 order-md-3 text-right">
               <div class="site-top-icons">
                 <ul>
-                  <li>
-                    <a href="/cart" class="site-cart">
-                      <span class="icon icon-shopping_cart"></span>
-                      <span class="count" id="cartcount"></span>
-                    </a>
-                  </li> 
-                  <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
+                  {% for item in right %}
+    
+                      <li>{{ item | raw }}</li>
+
+                  {% endfor %}
+                   <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
                 </ul>
               </div> 
             </div>
@@ -60,12 +62,12 @@
         <div class="container">
           <ul class="site-menu js-clone-nav d-none d-md-block">
             <li class="active">
-              <a href="/">Home</a>
+              <a href="/">{{ lang.home }}</a>
             </li>
-            <li><a href="/categorie/2">футболки</a></li>
-            <li><a href="/categorie/5">свитшоты</a></li>
-            <li><a href="/categorie/3">худи</a></li>
-            <li><a href="/categorie/4">рюкзаки</a></li>
+            <li><a href="{{ path_for('categorie', { id: 2 }) }}">{{ lang.t_shirts }}</a></li>
+            <li><a href="{{ path_for('categorie', { id: 5 }) }}">{{ lang.sweatshirts }}</a></li>
+            <li><a href="{{ path_for('categorie', { id: 3 }) }}">{{ lang.hoodies }}</a></li>
+            <li><a href="{{ path_for('categorie', { id: 4 }) }}">{{ lang.bags }}</a></li>
            
           </ul>
         </div>
