--- a/app/View/index.html
+++ b/app/View/index.html
@@ -1,5 +1,4 @@
-{% include 'header.html' %}
-
+{{ header | raw }}
  <div class="site-blocks-cover" style="background-image: url(images/hero_1.jpg);" data-aos="fade">
       <div class="container">
         <div class="row align-items-start align-items-md-center justify-content-end">
@@ -187,4 +186,4 @@
       </div>
     </div>
 
-{% include 'footer.html' %}
+{{ footer | raw }}
