--- a/app/View/shop.html
+++ b/app/View/shop.html
@@ -1,4 +1,4 @@
-{% include 'header.html' %}
+{{ header | raw }}
 
 
 <div class="site-section">
@@ -18,7 +18,7 @@
             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
               <div class="block-4 text-center border">
                 <figure class="block-4-image">
-                  <a href="shop-single.html"><img src="/images/{{ item.image }}.jpg" alt="Image placeholder" class="img-fluid"></a>
+                  <a href="/goods/{{ item.id }}"><img src="/images/{{ item.image }}.jpg" alt="Image placeholder" class="img-fluid"></a>
                 </figure>
                 <div class="block-4-text p-4">
                   <h3><a href="/goods/{{ item.id }}">{{ item.title }}</a></h3>
@@ -36,4 +36,4 @@
   </div>
 </div>
 
-{% include 'footer.html' %}
+{{ footer | raw }}
