--- a/app/View/common/footer.html
+++ b/app/View/common/footer.html
@@ -42,8 +42,8 @@
             <div class="block-5 mb-5">
               <h3 class="footer-heading mb-4">Contact Info</h3>
               <ul class="list-unstyled">
-                <li class="address">203 Fake St. Mountain View, San Francisco, California, USA</li>
-                <li class="phone"><a href="tel://23923929210">+2 392 3929 210</a></li>
+                <li class="address">{{ config.adress }}</li>
+                <li class="phone">+{{ config.number }}</li>
                 <li class="email">emailaddress@domain.com</li>
               </ul>
             </div>
