--- a/app/View/shop.html
+++ b/app/View/shop.html
@@ -18,10 +18,10 @@
             <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
               <div class="block-4 text-center border">
                 <figure class="block-4-image">
-                  <a href="/goods/{{ item.id }}"><img src="/images/{{ item.image }}.jpg" alt="Image placeholder" class="img-fluid"></a>
+                  <a href="{{path_for('product', {slug: item.slug})}}"><img src="/images/{{ item.image }}.jpg" alt="Image placeholder" class="img-fluid"></a>
                 </figure>
                 <div class="block-4-text p-4">
-                  <h3><a href="/goods/{{ item.id }}">{{ item.title }}</a></h3>
+                  <h3><a href="{{path_for('product', {slug: item.slug})}}">{{ item.title }}</a></h3>
                   <p class="mb-0">{{ item.description }}</p>
                   <p class="text-primary font-weight-bold">${{ item.price }}</p>
                 </div>
