--- a/app/View/cart.html
+++ b/app/View/cart.html
@@ -9,12 +9,12 @@
               <table class="table table-bordered">
                 <thead>
                   <tr>
-                    <th class="product-thumbnail">Image</th>
-                    <th class="product-name">Product</th>
-                    <th class="product-price">Price</th>
-                    <th class="product-quantity">Quantity</th>
-                    <th class="product-total">Total</th>
-                    <th class="product-remove">Remove</th>
+                    <th class="product-thumbnail">{{lang.image}}</th>
+                    <th class="product-name">{{lang.product}}</th>
+                    <th class="product-price">{{lang.price}}</th>
+                    <th class="product-quantity">{{lang.quantity}}</th>
+                    <th class="product-total">{{lang.total}}</th>
+                    <th class="product-remove">{{lang.remove}}</th>
                   </tr>
                 </thead>	
 				<tbody>
@@ -53,7 +53,7 @@
             <div class="row mb-5">
              
               <div class="col-md-8">
-                <button class="btn btn-outline-primary btn-sm btn-block">Continue Shopping</button>
+                <button class="btn btn-outline-primary btn-sm btn-block">{{lang.continue}}</button>
               </div>
             </div>
             
@@ -63,14 +63,14 @@
               <div class="col-md-7">
                 <div class="row">
                   <div class="col-md-12 text-right border-bottom mb-5">
-                    <h3 class="text-black h4 text-uppercase">Cart Totals</h3>
+                    <h3 class="text-black h4 text-uppercase">{{lang.cart_totals}}</h3>
                   </div>
                 </div>
                 <div class="row mb-3">
                 
                 <div class="row mb-5">
                   <div class="col-md-6">
-                    <span class="text-black">Total</span>
+                    <span class="text-black">{{lang.total}}</span>
                   </div>
                   <div class="col-md-6 text-right">
                     <strong class="text-black">${{ total_price }}</strong>
@@ -79,7 +79,7 @@
 
                 <div class="row">
                   <div class="col-md-12">
-                    <a class="btn btn-primary btn-lg py-3 btn-block" href="/checkout">Proceed To Checkout</a>
+                    <a class="btn btn-primary btn-lg py-3 btn-block" href="/checkout">{{lang.to_checkout}}</a>
                   </div>
                 </div>
               </div>
@@ -95,7 +95,7 @@
       Корзина пустая:
       <div class="col-lg-3 col-sm-6">
   
-          <a href="/categorie/2" class="btn btn-outline-primary btn-sm btn-block">Продолжить покупки</a>
+          <a href="/categorie/2" class="btn btn-outline-primary btn-sm btn-block">{{lang.continue}}</a>
       </div>
     </div>
     {% endif%}
