--- a/app/View/common/header.html
+++ b/app/View/common/header.html
@@ -32,14 +32,14 @@
             <div class="col-6 col-md-4 order-2 order-md-1 site-search-icon text-left">
               {% for item in left %}
     
-                     {{ item | raw }}
+                {{ item | raw }}
 
-                  {% endfor %}
+              {% endfor %}
             </div>
 
             <div class="col-12 mb-3 mb-md-0 col-md-4 order-1 order-md-2 text-center">
               <div class="site-logo">
-                <a href="/" class="js-logo-clone">Kappagaev</a>
+                <a href="/" class="js-logo-clone">{{config.name}}</a>
               </div>
             </div>
 
