--- a/app/View/checkout.html
+++ b/app/View/checkout.html
@@ -3,11 +3,12 @@
 
     <div class="site-section">
       <div class="container">
-          
+          <form action="" method="post">
         <div class="row">
           <div class="col-md-6 mb-5 mb-md-0">
             <h2 class="h3 mb-3 text-black">Billing Details</h2>
             <div class="p-3 p-lg-5 border">
+              {{ dump(errors()) }}
               <div class="form-group">
                 <label for="c_country" class="text-black">Country <span class="text-danger">*</span></label>
                 <input id="c_country" class="form-control" style="pointer-events:none;" value="Украина">
@@ -17,11 +18,12 @@
               <div class="form-group row">
                 <div class="col-md-6">
                   <label for="c_fname" class="text-black">First Name <span class="text-danger">*</span></label>
-                  <input type="text" class="form-control" id="first_name" name="c_fname">
+                  <input type="text" class="form-control" id="first_name" name="first_name" value="{{ val('first_name') }}">
                 </div>
                 <div class="col-md-6">
+                   {% if has_error('last_name') %}<span>{{ error('last_name') }}</span>{% endif %}
                   <label for="c_lname" class="text-black">Last Name <span class="text-danger">*</span></label>
-                  <input type="text" class="form-control" name="last_name">
+                  <input type="text" class="form-control" name="last_name" value="{{ val('last_name') }}">
                 </div>
               </div>
 
@@ -30,37 +32,37 @@
               <div class="form-group row">
                 <div class="col-md-12">
                   <label for="c_address" class="text-black">Адреса <span class="text-danger">*</span></label>
-                  <input type="text" class="form-control" id="address" name="street_address" placeholder="Вулиця">
+                  <input type="text" class="form-control" id="address" name="street_address" placeholder="Вулиця" value="{{ val('street_address') }}">
                 </div>
               </div>
 
               <div class="form-group">
-                <input type="text" class="form-control" name="house_address" placeholder="Дом">
+                <input type="text" class="form-control" name="house_address" placeholder="Дом" value="{{ val('house_address') }}">
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" name="flat_address" placeholder="Номер квартиры (опционально)">
+                <input type="text" class="form-control" name="flat_address" placeholder="Номер квартиры (опционально)" value="{{ val('flat_address') }}">
               </div>
 
 
               <div class="form-group row">
                 <div class="col-md-6">
                   <label for="c_state_country" class="text-black">Город <span class="text-danger">*</span></label>
-                  <input type="text" class="form-control" name="town">
+                  <input type="text" class="form-control" name="town" value="{{ val('town') }}">
                 </div>
                 <div class="col-md-6">
                   <label for="c_postal_zip" class="text-black">Zip <span class="text-danger">*</span></label>
-                  <input type="text" class="form-control" id="c_postal_zip" name="zip">
+                  <input type="text" class="form-control" id="c_postal_zip" name="zip" value="{{ val('zip') }}">
                 </div>
               </div>
 
               <div class="form-group row mb-5">
                 <div class="col-md-6">
                   <label for="c_email_address" class="text-black">Email <span class="text-danger">*</span></label>
-                  <input type="text" class="form-control" id="c_email_address" name="email">
+                  <input type="text" class="form-control" id="c_email_address" name="email" value="{{ val('email') }}">
                 </div>
                 <div class="col-md-6">
                   <label for="c_phone" class="text-black">Телефон <span class="text-danger">*</span></label>
-                  <input type="text" class="form-control" id="c_phone" name="phone" placeholder="Phone Number">
+                  <input type="text" class="form-control" id="c_phone" name="phone" placeholder="Phone Number" value="{{ val('phone') }}">
                 </div>
               </div>
 
@@ -90,21 +92,15 @@
                       <th>Total</th>
                     </thead>
                     <tbody>
+                      {% for item in goods %}
                       <tr>
-                        <td>Top Up T-Shirt <strong class="mx-2">x</strong> 1</td>
-                        <td>$250.00</td>
+                        <td>{{ item.title }}<strong class="mx-2">x</strong> {{ item.quantity }}</td>
+                        <td>₴ {{ item.total }}</td>
                       </tr>
-                      <tr>
-                        <td>Polo Shirt <strong class="mx-2">x</strong>   1</td>
-                        <td>$100.00</td>
-                      </tr>
-                      <tr>
-                        <td class="text-black font-weight-bold"><strong>Cart Subtotal</strong></td>
-                        <td class="text-black">$350.00</td>
-                      </tr>
+                      {%endfor%}
                       <tr>
                         <td class="text-black font-weight-bold"><strong>Order Total</strong></td>
-                        <td class="text-black font-weight-bold"><strong>$350.00</strong></td>
+                        <td class="text-black font-weight-bold"><strong>₴ {{total_price}}</strong></td>
                       </tr>
                     </tbody>
                   </table>
@@ -115,7 +111,7 @@
                   
 
                   <div class="form-group">
-                    <a class="btn btn-primary btn-lg py-3 btn-block" href="/checkout/store">Place Order</a>
+                    <button class="btn btn-primary btn-lg py-3 btn-block">Place Order</button>
                   </div>
 
                 </div>
@@ -124,8 +120,9 @@
 
           </div>
         </div>
+      </form>
         <!-- </form> -->
       </div>
     </div>
 
-    {{ footer | raw }}
+    {{ footer | raw }} 
